--- a/public/css/home-custom-3.css
+++ b/public/css/home-custom-3.css
@@ -318,6 +318,12 @@ hr.divider{
     padding-right: 20px;
 }
 
+@media (max-width: 991px) {
+  .ag-inner-box-left, .ag-inner-box-right {
+      margin-bottom: 1.5rem;
+  }
+}
+
 .ag-icon-list h4{
     font-size: 17px;
     margin-top: 10px;
